# cpp-project-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: test.yaml
example/: CMakeLists.txt  inheritance.cpp
include/cpjview/client/analysis/: analysis.hpp  analysis_manager.hpp  code_splitter.hpp  context_controlled_visitor.hpp  inheritance.hpp  naming.hpp
include/cpjview/client/loader/: loader.hpp
include/cpjview/client/sync/: http_sync.hpp  sync.hpp
include/cpjview/client/utils/: file_system.hpp  task_priority.hpp
include/cpjview/common/: argparser.hpp  scheduler.hpp
include/cpjview/protocol/: code.hpp  inheritance.hpp  label.hpp  project.hpp
include/cpjview/server/http/: http.hpp
include/cpjview/server/persistence/: entity.hpp  error_code.hpp  inheritance.hpp  kv.hpp  persistence.hpp  project.hpp  storage.hpp  string_pool.hpp
scripts/: build_deps.js  build_frontend.js  build_llvm.js  build_sqlite3.js
src/backend/: CMakeLists.txt  main.cpp
src/backend/analysis/: analysis.cpp  inheritance.cpp
src/backend/include/cpjview/analysis/: analysis.hpp  inheritance.hpp
src/backend/include/cpjview/loader/: filter.hpp  loader.hpp
src/backend/include/cpjview/persistence/: persistence.hpp
src/backend/include/cpjview/server/: server.hpp
src/backend/include/cpjview/utils/: argparser.hpp  file_system.hpp  result.hpp  scheduler.hpp
src/backend/loader/: filter.cpp  loader.cpp
src/backend/persistence/: persistence.cpp
src/backend/server/: server.cpp
src/backend/utils/: argparser.cpp  file_system.cpp  scheduler.cpp
src/client/: CMakeLists.txt  client.cpp
src/client/analysis/: analysis.cpp  analysis_manager.cpp  code_splitter.cpp  inheritance.cpp  naming.cpp
src/client/loader/: filter.cpp  loader.cpp
src/client/sync/: http_sync.cpp
src/client/utils/: file_system.cpp
src/common/: CMakeLists.txt  argparser.cpp  protocol.cpp  scheduler.cpp
src/frontend/: app.tsx  code_card.tsx  deps.tsx  draggable_card.tsx  index.tsx  inheritance_tree.tsx  project_selector.tsx  tsconfig.json
src/server/: CMakeLists.txt  server.cpp
src/server/http/: http.cpp
src/server/persistence/: inheritance.cpp  persistence.cpp  project.cpp  sqlite3.cpp  sqlite3.hpp  storage.cpp
src/www/: index.html
tests/: CMakeLists.txt
tests/client/analysis/: CMakeLists.txt  inheritance_test.cpp
tests/server/: CMakeLists.txt
tests/server/analysis/: CMakeLists.txt  inheritance_test.cpp
